# app/routes/photo.record.route.js
@@ -33,25 +33,25 @@ module.exports = function (app) {
     })}
   ], controller.uploadImage);
 
-  app.post("/photos/:ID/image", [
+  app.post("/photos/:id/image", [
     authJwt.verifyToken,
     check("id").isInt().withMessage("ID must be an integer"),
     body("path").notEmpty().withMessage("Path shouldn't empty").isString().withMessage("Path invalid"),
   ], controller.setImage);
 
-  app.get("/photos/:ID/image", [
+  app.get("/photos/:id/image", [
     authJwt.verifyToken,
     check("id").isInt().withMessage("ID must be an integer"),
   ], controller.downloadImage);
   
-  app.post("/photos/:ID", [
+  app.post("/photos/:id", [
     authJwt.verifyToken,
     check("id").isInt().withMessage("ID must be an integer"),
     body("detail").optional().isString().withMessage("Detail invalid"),
     body("date").optional().isDate().withMessage("Date invalid"),
     body("tag").optional().isString().withMessage("Detail invalid"),
   ], controller.updatePhotoRecord);
-  app.delete("/photos/:ID", [
+  app.delete("/photos/:id", [
     authJwt.verifyToken,
   ], controller.deletePhotoRecord);
   
